@@ -186,7 +186,7 @@ public:
 		{ return weapon; }
 	int get_reach() const
 		{ return reach; }
-	void set_stats(int str, int dex, int intel, int cmb, int armur,
+	void set_stats(int str, int dex, int intel, int cmb, int armour,
 			int wpn, int rch);
 	int get_equip_offset() const
 		{ return equip_offset; }
